force-app/main/default/objects/Workflow__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>