force-app/main/default/objects/Workflow__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Management</label>
    <referenceTo>Case_Management__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>