force-app/main/default/objects/Workflow__c/fields/Config_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Config_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Config Workflow</label>
    <referenceTo>Config_Workflow__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>