force-app/main/default/objects/Workflow__c/fields/Config_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>Config_Workflow_Id__c</fullName>
    <label>Config Workflow Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>