force-app/main/default/objects/Workflow__c/fields/Patient_Admission__c.field-meta.xml
<CustomField>
    <fullName>Patient_Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Admission</label>
    <referenceTo>Patient_Admission__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>