force-app/main/default/objects/Workflow__c/fields/Team_Based_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Team_Based_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Based Assignment</label>
    <type>Checkbox</type>
</CustomField>